[gd_scene load_steps=5 format=3 uid="uid://baf7v2wvp10ia"]

[ext_resource type="Script" path="res://levels/5level/reset_sign.gd" id="1_xmrjs"]
[ext_resource type="Texture2D" uid="uid://cjxlmg6ogteyj" path="res://Quest/01.png" id="2_7m43p"]
[ext_resource type="PackedScene" uid="uid://6c0uvypso4ey" path="res://levels/5level/crate.tscn" id="3_o7cqh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8m7vs"]
radius = 49.0

[node name="ResetSign" type="Node2D"]
scale = Vector2(3, 3)
script = ExtResource("1_xmrjs")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_8m7vs")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_7m43p")

[node name="space" type="Label" parent="."]
texture_filter = 1
offset_left = -23.0
offset_top = -40.0
offset_right = 23.0
offset_bottom = -17.0
text = "Space"

[node name="help" type="Label" parent="."]
texture_filter = 1
offset_left = -22.0
offset_top = -17.0
offset_right = 24.0
offset_bottom = 6.0
text = "?"
horizontal_alignment = 1

[node name="Crate2" parent="." instance=ExtResource("3_o7cqh")]
position = Vector2(95.3333, -96)
scale = Vector2(0.3, 0.3)

[node name="Crate3" parent="." instance=ExtResource("3_o7cqh")]
position = Vector2(95.3333, -129.333)
scale = Vector2(0.3, 0.3)

[node name="Crate4" parent="." instance=ExtResource("3_o7cqh")]
position = Vector2(95, -162.333)
scale = Vector2(0.3, 0.3)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
